# DevManager

./: .gitmodules  CMakeLists.txt  README.md
sources/: application.cpp  application.hpp  main.cpp  serialization.cpp  serialization.hpp
sources/models/: project.hpp
sources/views/: project_types.cpp  project_types.hpp  project_types_view.cpp  project_types_view.hpp  projects_view.cpp  projects_view.hpp  search_paths_view.cpp  search_paths_view.hpp
